--- a/.exemple.env
+++ b/.exemple.env
@@ -1,6 +1,7 @@
 #### SERVER VARS
 NODE_ENV= #Para rodar localmente, insira 'development', caso seja produção, insira 'production' no hospedeiro do deploy
 PORT=
+DATABASE_URL= #URL do banco de dados, por exemplo: 'mongodb://localhost:27017/mydatabase' ou 'mysql://user:password@localhost:3306/mydatabase'
 
 #### DATABASE VARS
 DATABASE_HOST=
